fix: toolbar on tablet

--- a/wwwroot/assets/style.css
+++ b/wwwroot/assets/style.css
@@ -437,6 +437,10 @@ h2 {
         grid-template-columns: auto;
         grid-template-rows: auto;
     }
+
+    .toolbar {
+        grid-column: 1/2;
+    }
 }
 
 @media print {
